--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="./news.html">DISCOVERY</a></li>
             <li><a href="">PHOTOS</a></li>
             <li><a href="">CONTACT</a></li>
-            <img class="header__menu_img" src="./image/header-profile.svg" alt="profile picture">
+            <img class="header__menu_img" src="./header-profile.svg" alt="profile picture">
         </ul>
     </header>
     <!-- დასრულდა header -->
@@ -30,7 +30,7 @@
     <!-- დაიწყო slider-ის section -->
     <section class="slider">
         <figure class="slider__cover">
-            <img src="./image/world-news.png" alt="neature">
+            <img src="./world-news.png" alt="neature">
             <div class="slider_cover_text">
                 <div class="container">
                     <div class="slider__cover_header">
@@ -64,7 +64,7 @@
                             has
                             appareat…</p>
                         <div class="slider__content_item_date">
-                            <img src="./image/time.svg" alt="timer">
+                            <img src="./time.svg" alt="timer">
                             2 min ago
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                             has
                             appareat…</p>
                         <div class="slider__content_item_date">
-                            <img src="./image/time.svg" alt="timer icone">
+                            <img src="./time.svg" alt="timer icone">
                             2 min ago
                         </div>
                     </div>
@@ -100,14 +100,14 @@
                 <div class="col-4">
                     <div class="treding_item d_m_none">
                         <figure class="treding_item_cover">
-                            <img src="./image/tranding1.png" alt="neature">
+                            <img src="./tranding1.png" alt="neature">
                         </figure>
                         <div class="treding_item_text">
                             <h1 class="treding_item_title">Dolore magna aliqua</h1>
                             <p class="treding_item_description">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel
                                 id, ad has appareat.</p>
                             <div class="slider__content_item_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 2 min ago
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                 <div class="col-4">
                     <div class="treding_item">
                         <figure class="treding_item_cover">
-                            <img src="./image/trending2.png" alt="Umbrella">
+                            <img src="./trending2.png" alt="Umbrella">
                         </figure>
                         <div class="treding_item_text">
                             <h1 class="treding_item_title">Morbi eleifend a libero</h1>
@@ -124,7 +124,7 @@
                                 id, ad has appareat.
                             </p>
                             <div class="slider__content_item_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 1h ago
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                 <div class="col-4">
                     <div class="treding_item active">
                         <figure class="treding_item_cover">
-                            <img src="./image/trending3.png" alt="Mountaineer">
+                            <img src="./trending3.png" alt="Mountaineer">
                         </figure>
                         <div class="treding_item_text">
                             <h1 class="treding_item_title">Morbi eleifend a libero</h1>
@@ -141,7 +141,7 @@
                                 id, ad has appareat.
                             </p>
                             <div class="slider__content_item_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 3h ago
                             </div>
                         </div>
@@ -165,7 +165,7 @@
             <div class="happeningNow_inner">
                 <div class="happeningNow_cover">
                     <figure class="happeningNow_cover_img">
-                        <img src="./image/bridge.png" alt="bridge" class="happeningNow_cover_img_img">
+                        <img src="./bridge.png" alt="bridge" class="happeningNow_cover_img_img">
                         <div class="slider_cover_text">
                             <div class="happeningNow__cover_header">
                                 <h1 class="happeningNow__cover_header_title">CITY</h1>
@@ -175,13 +175,13 @@
                                 id nullam detracto, vidit vituperatoribus duo id.
                             </p>
                             <div class="happeningNow__cover_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 3h ago by Worldnews
                             </div>
                         </div>
                     </figure>
                     <figure class="happeningNow_cover_img">
-                        <img src="./image/forest.png" alt="forest" class="happeningNow_cover_img_img">
+                        <img src="./forest.png" alt="forest" class="happeningNow_cover_img_img">
                         <div class="slider_cover_text">
                             <div class="happeningNow__cover_header">
                                 <h1 class="happeningNow__cover_header_title">TRAVEL</h1>
@@ -192,7 +192,7 @@
                                 vidit vituperatoribus duo id.
                             </p>
                             <div class="happeningNow__cover_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 3h ago by Worldnews
                             </div>
                         </div>
@@ -202,31 +202,31 @@
                     <div class="row">
                         <div class="happeningNowr__content_item">
                             <figure class="happeningNowr__content_cover">
-                                <img src="./image/elepant-test.png" alt="elephant">
+                                <img src="./elepant-test.png" alt="elephant">
                             </figure>
                             <h1 class="happeningNowr__content_item_title">Small title</h1>
                             <div class="slider__content_item_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 3h ago by Worldnews
                             </div>
                         </div>
                         <div class="happeningNowr__content_item">
                             <figure class="happeningNowr__content_cover">
-                                <img src="./image/parrot.png" alt="parrot">
+                                <img src="./parrot.png" alt="parrot">
                             </figure>
                             <h1 class="happeningNowr__content_item_title">Small title</h1>
                             <div class="slider__content_item_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 4h ago by Days
                             </div>
                         </div>
                         <div class="happeningNowr__content_item active">
                             <figure class="happeningNowr__content_cover">
-                                <img src="./image/way.png" alt="way">
+                                <img src="./way.png" alt="way">
                             </figure>
                             <h1 class="happeningNowr__content_item_title">Small title</h1>
                             <div class="slider__content_item_date">
-                                <img src="./image/time.svg" alt="timer icone">
+                                <img src="./time.svg" alt="timer icone">
                                 3h ago by Monica
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                             <label class="footer_content_contact_email_form_label">
                                 <input type="email" placeholder="email"
                                     class="footer_content_contact_email_form_label_input">
-                                <button class="footer_content_contact_email_btn"><img src="./image/send.svg"
+                                <button class="footer_content_contact_email_btn"><img src="./send.svg"
                                         alt="send icone"></button>
                             </label>
                         </form>
@@ -276,12 +276,12 @@
                             products!</p>
                     </div>
                     <div class="footer_content_contact_icones">
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/instagram.svg"
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./instagram.svg"
                                 alt="instagram"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/twitter.svg" alt="twitter icone"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/facebook.svg"
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./twitter.svg" alt="twitter icone"></a>
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./facebook.svg"
                                 alt="facebook icone"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/web.svg" alt="web icone"></a>
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./web.svg" alt="web icone"></a>
                     </div>
                 </div>
             </div>
@@ -297,31 +297,31 @@
         <ul class="menu_list">
             <li class="menu_list_item">
                 <a href="" class="active">
-                    <img src="./image/home.svg" alt="home icone" class="menu_list_img">
+                    <img src="./home.svg" alt="home icone" class="menu_list_img">
                     HOME
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/discover.svg" alt="discover icone" class="menu_list_img">
+                    <img src="./discover.svg" alt="discover icone" class="menu_list_img">
                     DISCOVERY
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/photos.svg" alt="photos icone" class="menu_list_img">
+                    <img src="./photos.svg" alt="photos icone" class="menu_list_img">
                     PHOTOS
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/mail.svg" alt="mail icone" class="menu_list_img">
+                    <img src="./mail.svg" alt="mail icone" class="menu_list_img">
                     CONTACT
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/menu-profile.svg" alt="profile icone" class="menu_list_img">
+                    <img src="./menu-profile.svg" alt="profile icone" class="menu_list_img">
                     PROFILE
                 </a>
             </li>
