--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <li><a href="./news.html">DISCOVERY</a></li>
             <li><a href="">PHOTOS</a></li>
             <li><a href="">CONTACT</a></li>
-            <img class="header__menu_img" src="./image/header-profile.svg" alt="profile picture">
+            <img class="header__menu_img" src="./header-profile.svg" alt="profile picture">
         </ul>
     </header>
     <!-- დასრულდა header -->
@@ -29,24 +29,24 @@
         <div class="container">
             <div class="news_header">
                 <div class="news_header_text">
-                    <img src="./image/home.svg" alt="home icone" class="news_header_text_img">
+                    <img src="./home.svg" alt="home icone" class="news_header_text_img">
                     <p class="news_header_text_content active">STORY</p>
                     <div class="news_header_text_content_slesh">/</div>
                     <p class="news_header_text_content">WORLD NEWS</p>
                 </div>
-                <img src="./image/Arrow.svg" alt="Arrow back icone" class="news_header_text_arrow">
+                <img src="./Arrow.svg" alt="Arrow back icone" class="news_header_text_arrow">
                 <figure class="news_header_icone">
-                    <img src="./image/filter.svg" alt="">
+                    <img src="./filter.svg" alt="">
                 </figure>
             </div>
             <div class="news_slider">
                 <figure class="news_slider_cover">
-                    <img class="news_slider_cover_img" src="./image/lake.png" alt="lake in mountain">
+                    <img class="news_slider_cover_img" src="./lake.png" alt="lake in mountain">
                     <div class="news_slider_cover_text">
                         <h1 class="news_slider__cover_text_title">WORLD NEWS</h1>
                         <div class="news_slider__cover_text_line"></div>
                         <p class="news_slider__cover_text_description">Lorem ipsum dolor sit amet, in eam odio amet</p>
-                        <img class="news_slider_cover_text_img" src="./image/avatar.svg" alt="">
+                        <img class="news_slider_cover_text_img" src="./avatar.svg" alt="">
                     </div>
                 </figure>
                 <div class="news_slider_content">
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-4 col-12">
                     <div class="profile_item">
-                        <img src="./image/avatar.svg" alt="avatar icone" class="profile_item_img">
+                        <img src="./avatar.svg" alt="avatar icone" class="profile_item_img">
                         <h1 class="profile_item_title">Phasellus eu nulla malesuada, luctus diam.</h1>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             tristique tempus. Quisque
                             eleifend vulputate.</p>
                         <div class="slider__content_item_date">
-                            <img src="./image/time.svg" alt="timer icone">
+                            <img src="./time.svg" alt="timer icone">
                             2 min ago
                         </div>
                     </div>
@@ -116,7 +116,7 @@
     <section class="cover">
         <div class="container">
             <figure class="cover_img">
-                <img src="./image/elephant-cover.png" alt="elephant">
+                <img src="./elephant-cover.png" alt="elephant">
             </figure>
             <div class="cover_text">
                 <p>orem ipsum dolor sit amet consectetur adipiscing elit sodales primis, mollis viverra
@@ -195,7 +195,7 @@
                             <label class="footer_content_contact_email_form_label">
                                 <input type="email" placeholder="email"
                                     class="footer_content_contact_email_form_label_input">
-                                <button class="footer_content_contact_email_btn"><img src="./image/send.svg"
+                                <button class="footer_content_contact_email_btn"><img src="./send.svg"
                                         alt="send icone"></button>
                             </label>
                         </form>
@@ -203,12 +203,12 @@
                             products!</p>
                     </div>
                     <div class="footer_content_contact_icones">
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/instagram.svg"
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./instagram.svg"
                                 alt="instagram icone"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/twitter.svg" alt="twitter icone"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/facebook.svg"
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./twitter.svg" alt="twitter icone"></a>
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./facebook.svg"
                                 alt="facebook icone"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/web.svg" alt="web icone"></a>
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./web.svg" alt="web icone"></a>
                     </div>
                 </div>
             </div>
