--- a/news.html
+++ b/news.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
     <title>Home</title>
 </head>
 
@@ -15,7 +15,7 @@
     <!-- დაიწყო header -->
     <header class="header">
         <button class="header_menu_btn">
-            <img src="./image/menu.svg" alt="menu icone">
+            <img src="./menu.svg" alt="menu icone">
         </button>
         <div class="header__logo"><a href="./index.html">LOGO</a></div>
         <ul class="header__menu">
@@ -23,7 +23,7 @@
             <li><a href="./news.html">DISCOVERY</a></li>
             <li><a href="">PHOTOS</a></li>
             <li><a href="">CONTACT</a></li>
-            <img class="header__menu_img" src="./image/header-profile.svg" alt="profile picture">
+            <img class="header__menu_img" src="./header-profile.svg" alt="profile picture">
         </ul>
     </header>
     <!-- დასრულდა header -->
@@ -67,7 +67,7 @@
                             <label class="footer_content_contact_email_form_label">
                                 <input type="email" placeholder="email"
                                     class="footer_content_contact_email_form_label_input">
-                                <button class="footer_content_contact_email_btn"><img src="./image/send.svg"
+                                <button class="footer_content_contact_email_btn"><img src="./send.svg"
                                         alt="send icone"></button>
                             </label>
                         </form>
@@ -75,12 +75,12 @@
                             products!</p>
                     </div>
                     <div class="footer_content_contact_icones">
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/instagram.svg"
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./instagram.svg"
                                 alt="instagram"></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/twitter.svg" alt=""></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/facebook.svg"
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./twitter.svg" alt=""></a>
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./facebook.svg"
                                 alt=""></a>
-                        <a href="#"><img class="footer_content_contact_icones_img" src="./image/web.svg" alt=""></a>
+                        <a href="#"><img class="footer_content_contact_icones_img" src="./web.svg" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -96,31 +96,31 @@
         <ul class="menu_list">
             <li class="menu_list_item">
                 <a href="" class="active">
-                    <img src="./image/home.svg" alt="home icone" class="menu_list_img">
+                    <img src="./home.svg" alt="home icone" class="menu_list_img">
                     HOME
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/discover.svg" alt="discover icone" class="menu_list_img">
+                    <img src="./discover.svg" alt="discover icone" class="menu_list_img">
                     DISCOVERY
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/photos.svg" alt="photos icone" class="menu_list_img">
+                    <img src="./photos.svg" alt="photos icone" class="menu_list_img">
                     PHOTOS
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/mail.svg" alt="mail icone" class="menu_list_img">
+                    <img src="./mail.svg" alt="mail icone" class="menu_list_img">
                     CONTACT
                 </a>
             </li>
             <li class="menu_list_item">
                 <a href="">
-                    <img src="./image/menu-profile.svg" alt="profile icone" class="menu_list_img">
+                    <img src="./menu-profile.svg" alt="profile icone" class="menu_list_img">
                     PROFILE
                 </a>
             </li>
